--- a/resume/index.html
+++ b/resume/index.html
@@ -115,7 +115,7 @@
             <h5 class="exp-title">Mission Control Space Robotics/Software Engineering Co-op Student</h5><br>
             <h6 class="subtitle">Sept 2024 - Aug 2025</h6><br>
             <ul class="exp-list">
-                <li>Co-op student at Mission Control in Ottawa for a 1 year work term, developed software on the Missions team</li>
+                <li>Co-op student at Mission Control, an Ottawa based space robotics/autonomy company, for a 1 year work term - developed software on the Missions team</li>
                 <li>Primarily focused on writing ground software for BEACON lunar rover in collaboration with Astrobotic (Griffin-1 payload)</li>
                 <li>Contributed to ground software architecture design, writing software, testing/validation via operations rehearsals for BEACON</li>
                 <li>Designed, implemented, and debugged software tools and algorithms to assist BEACON mission operators</li>
