--- a/resume/index.html
+++ b/resume/index.html
@@ -116,7 +116,7 @@
             <h6 class="subtitle">Sept 2024 - Aug 2025</h6><br>
             <ul class="exp-list">
                 <li>Co-op student at Mission Control, an Ottawa based space robotics/autonomy company, for a 1 year work term - developed software on the Missions team</li>
-                <li>Primarily focused on writing ground software for BEACON lunar rover in collaboration with Astrobotic (Griffin-1 payload)</li>
+                <li>Primarily focused on writing ground software for the BEACON lunar rover in collaboration with Astrobotic (Griffin-1 payload)</li>
                 <li>Contributed to ground software architecture design, writing software, testing/validation via operations rehearsals for BEACON</li>
                 <li>Designed, implemented, and debugged software tools and algorithms to assist BEACON mission operators</li>
                 <li>Contributed to documentation, proposal writing, and supported outreach activities such as the CSA/MDA Rover Driving Academy</li>
